# raylibTests

./: .gitignore  .gitmodules  CMakeLists.txt  Graviton  LICENSE  Makefile  build.sh  gravsim  main.c  mouse_test  mouse_test.c  raylib-test  readme.md  test.sh
.github/: copilot-instructions.md
buildWin/: CPackConfig.cmake  CPackSourceConfig.cmake  compile_commands.json
buildWin/.cmake/api/v1/reply/: cache-v2-3ead310c46085c37bcbc.json  cmakeFiles-v1-0b4cc9ec565142afc796.json  codemodel-v2-59880caa3738a9e79a4f.json  index-2025-09-16T16-08-41-0411.json  target-glfw-Debug-450aff58b0367ba8248c.json  target-graviton-Debug-30ff4cb1c414a3da4609.json  target-raylib-Debug-dbc56110cde4d2495a22.json  toolchains-v1-df7f35f83240b731582f.json
shader/: GridGravitation.comp  gravitation.comp
src/: Calculations.c  Calculations.h  Draw.c  Draw.h  GridSystem.c  GridSystem.h  GridSystemGravity_CS.c  GridSystemGravity_CS.h  InputHandler.c  InputHandler.h  compute.c  compute.h  main.c  main3D.c  old_main.c  particle.c  particle.h  settings.h  test.c
